--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -157,3 +157,132 @@ body {
     width: 80%;
     background: var(--dark-brown);
 }
+
+.bright-section {
+    position: relative;
+    z-index: 10;
+    min-height: 500px;
+}
+
+.bright-section img {
+    max-width: 40%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 30%;
+}
+
+.cat-blog {
+    background-color: #332c29;
+    width: 20%;
+    padding: 20px;
+    color: var(--secondary-color);
+    border-radius: 20px;
+    position: relative;
+    z-index: 10;
+    left: 20%;
+    top: 100%;
+}
+
+.cat-blog h2 {
+    font-size: 60px;
+}
+
+.cat-blog h4 {
+    font-size: 30px;
+}
+
+.cat-blog-section {
+    position: relative;
+}
+
+.cat-blog-container {
+    width: 100%;
+    position: absolute;
+    bottom: -20%;
+    height: 350px;
+}
+
+
+.cat-care {
+    padding: 24px;
+    background-color: var(--secondary-color);
+    width: 30%;
+    border-radius: 24px;
+    position: relative;
+    top: 30%;
+    left: 48%;
+    box-shadow: 5px 0px 12px 10px rgba(214,214,214,1);
+}
+
+.cat-care h2 {
+    margin-top: 24px;
+    margin-bottom: 24px;
+    font-size: 36px;
+}
+
+.cat-care ol {
+    margin-top: 24px;
+    margin-bottom: 24px;
+    padding-left: 16px;
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.btn {
+    text-transform: uppercase;
+    color: var(--secondary-color);
+    background: var(--light-brown);
+    border-radius: 20px;
+    width: 150px;
+    padding: 14px;
+    border: none;
+}
+
+.btn:hover {
+    opacity: 0.7;
+    color: var(--primary-color);
+    cursor: pointer;
+}
+
+.white-section {
+    height: 1000px;
+    background: var(--secondary-color);
+}
+
+.gallery-section {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    height: 1200px;
+    background: var(--dark-brown);
+    position: relative;
+}
+
+.gallery-items {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 1fr;
+    gap: 40px;
+    max-width: 800px;
+    position: absolute;
+    top: -20%;
+}
+
+.gallery-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    background: #f5f5f5;
+    border-radius: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.gallery-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
