--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -2,6 +2,8 @@
 https://nicepage.com/ht/3444245/cat-stories-tips-and-tricks-html-template
  */
 
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+
 :root {
     --primary-color: #000000;
     --secondary-color: #ffff;
@@ -10,20 +12,22 @@ https://nicepage.com/ht/3444245/cat-stories-tips-and-tricks-html-template
     --light-grey: #ded9d7;
 }
 
-* {
-    margin: 0;
-}
 
 body {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 .main-menu {
     display: flex;
+    justify-content: center;
 }
 
-.logo {
-    width: 30%;
+.logo img:hover {
+    opacity: 0.8;
+    cursor: pointer;
 }
 
 .nav-links {
@@ -40,17 +44,30 @@ body {
     color: var(--primary-color);
 }
 
+.nav-link a::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 3px;
+    background: #000;
+    transition: width 0.3s;
+}
+
+.nav-link a:hover::after {
+    width: 100%;
+}
+
 .welcome-section {
     background-image: url("../images/background_cat.jpg");
     background-position: center;
+    background-size: cover;
+    width: 100%;
     height: 100vh;
     background-repeat: no-repeat;
 }
 
 .welcome-text {
-    position: absolute;
-    left: 60%;
-    top: 40%;
+    padding: 48px;
     color: var(--secondary-color);
     text-align: right;
 }
@@ -69,23 +86,25 @@ body {
 .about-section {
     text-align: center;
     background: var(--light-grey);
-    height: 400px;
+    height: 500px;
 }
 
 .about-section h2 {
     font-size: 48px;
     padding-top: 60px;
+    margin: 0;
 }
 
 .about-section p {
     font-size: 24px;
     padding: 16px;
     width: 50%;
-    margin: 0 auto;
+    margin: 24px auto;
 }
 
 .cat-container {
     background-color: var(--light-brown);
+    height: 100%;
 }
 
 .cat-service {
@@ -93,12 +112,7 @@ body {
     justify-content: center;
     gap: 50px;
     position: relative;
-    top: -175px;
-}
-
-.bright-section {
-    background-color: var(--light-grey);
-    height: 500px;
+    top: -150px;
 }
 
 .cat-service-item {
@@ -108,6 +122,7 @@ body {
     text-align: center;
     position: relative;
     background-color: var(--secondary-color);
+    z-index: 20;
 }
 
 .cat-service-item:nth-child(2) {
@@ -164,36 +179,43 @@ body {
 
 .bright-section {
     position: relative;
+    background-color: var(--light-grey);
     z-index: 10;
-    min-height: 500px;
+    height: 400px;
 }
 
-.bright-section img {
-    max-width: 40%;
+.casual-cat-image {
+    width: 100%;
+    position: relative;
+    top: -250px;
+    z-index: 10;
+}
+
+.casual-cat-image img {
+    max-width: 55%;
     height: auto;
-    position: absolute;
-    top: 50%;
-    left: 30%;
+    display: block;
+    margin: auto;
+    border-radius: 20px;
 }
 
 .cat-blog {
     background-color: #332c29;
-    width: 20%;
-    padding: 40px;
+    width: 30%;
+    padding: 24px;
     color: var(--secondary-color);
     border-radius: 20px;
-    position: relative;
-    z-index: 10;
-    left: 20%;
-    top: 100%;
 }
 
 .cat-blog h2 {
     font-size: 60px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .cat-blog h4 {
     font-size: 30px;
+    margin: 0;
 }
 
 .cat-blog-section {
@@ -201,21 +223,19 @@ body {
 }
 
 .cat-blog-container {
-    width: 100%;
-    position: absolute;
-    bottom: -20%;
-    height: 350px;
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+    position: relative;
+    top: -100px;
 }
 
 
 .cat-care {
-    padding: 24px;
+    padding: 30px;
     background-color: var(--secondary-color);
-    width: 30%;
+    width: 35%;
     border-radius: 24px;
-    position: relative;
-    top: 30%;
-    left: 48%;
     box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.15);
 }
 
@@ -249,16 +269,10 @@ body {
     cursor: pointer;
 }
 
-.white-section {
-    height: 1000px;
-    background: var(--secondary-color);
-}
-
 .gallery-section {
     display: flex;
     justify-content: center;
     padding: 20px;
-    height: 1000px;
     background: var(--light-brown);
     position: relative;
 }
@@ -269,8 +283,9 @@ body {
     grid-auto-rows: 1fr;
     gap: 40px;
     max-width: 900px;
-    position: absolute;
-    top: -20%;
+    width: 70%;
+    position: relative;
+    top: -200px;
 }
 
 .gallery-item {
@@ -307,6 +322,8 @@ body {
     background: var(--light-brown);
     text-align: center;
     color: var(--secondary-color);
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .subscribe-section img {
@@ -350,14 +367,21 @@ body {
     padding-top: 40px;
     padding-bottom: 40px;
     font-size: 20px;
+    margin: 0;
 }
 
 .cat-tips-container {
-    height: 800px;
     background: var(--light-brown);
     display: flex;
     justify-content: center;
     position: relative;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.dark-brown-margin {
+    height: 200px;
+    background: var(--light-brown);
 }
 
 .cat-tips {
@@ -371,15 +395,22 @@ body {
 }
 
 .cat-tips-img {
-    position: relative;
-    top: 25%
+    text-align: center;
+    width: 100%;
+}
+
+.cat-tips-img img {
+    border-radius: 20px;
+    max-width: 65%;
+    margin: 50px;
 }
 
 .cat-tip {
     background: var(--secondary-color);
     border-radius: 20px;
     padding: 30px 20px 30px 20px;
-    box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.15);}
+    box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.15);
+}
 
 .cat-tip h2 {
     font-size: 20px;
@@ -395,12 +426,12 @@ body {
 }
 
 .keep-pet-happy-container {
-    height: 800px;
-    width: 75%;
-    margin: auto;
+    width: 70%;
+    margin: 50px auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
     align-content: center;
     gap: 40px;
 }
@@ -422,8 +453,8 @@ body {
 }
 
 .keep-pet-happy-container .right-side {
-    width: auto;
     position: relative;
+    top: 100px;
 }
 
 .keep-pet-happy-container .right-side img {
@@ -437,6 +468,229 @@ body {
     background: var(--light-grey);
     position: absolute;
     top: -30%;
-    left: 40%;
+    left: 30%;
     z-index: -1;
+}
+
+.need-help-container {
+    position: relative;
+    top: 100px;
+    display: flex;
+    width: 50%;
+    margin: auto;
+    gap: 40px;
+    box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.2);
+    padding: 50px;
+    border-radius: 32px;
+    background: var(--secondary-color);
+    align-items: center;
+}
+
+.need-help-container .left-side {
+    width: 50%;
+}
+
+.need-help-container .left-side .text {
+    font-size: 18px;
+    line-height: 2;
+    color: var(--light-brown);
+}
+
+.social-icons {
+    display: flex;
+    gap: 20px;
+}
+
+.social-icons a {
+    font-size: 24px;
+    color: var(--dark-brown);
+    text-decoration: none;
+}
+
+.fa:hover {
+    color: var(--light-brown);
+    cursor: pointer;
+}
+
+.need-help-container .right-side {
+    width: 50%;
+}
+
+.brown-space {
+    height: 300px;
+    background: var(--light-brown);
+}
+
+.custom-form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+label {
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #333;
+}
+
+input {
+    padding: 10px;
+    border: none;
+    border-bottom: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+    outline: none;
+    transition: border-color 0.3s ease;
+}
+
+input:focus {
+    border-color: #555;
+}
+
+
+.submit-btn {
+    padding: 14px;
+    font-size: 14px;
+    font-weight: bold;
+    width: 100%;
+    color: #fff;
+    background-color: #4a4a4a;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    text-align: center;
+    transition: background-color 0.3s ease;
+    text-transform: uppercase;
+}
+
+.submit-btn:hover {
+    background-color: #333;
+    opacity: 0.8;
+}
+
+.main-footer {
+    min-height: 200px;
+    background: var(--dark-brown);
+}
+
+@media screen and (max-width: 1200px) {
+    .cat-service {
+        flex-direction: column;
+        align-items: center;
+        gap: 0;
+    }
+
+    .cat-service-item {
+        width: 70%;
+    }
+
+    .bright-section {
+        height: 500px;
+    }
+
+    .cat-tips {
+        max-width: 65%;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .gallery-items {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .cat-tips-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .cat-blog h2 {
+        font-size: 48px;
+    }
+
+    .cat-tips {
+        left: 0;
+    }
+
+    .need-help-container {
+        width: 70%;
+        flex-direction: column;
+        padding: 20px;
+    }
+
+    .need-help-container .left-side {
+        width: 90%;
+        text-align: center;
+    }
+
+    .need-help-container .right-side {
+        width: 90%;
+    }
+
+    .social-icons {
+        justify-content: center;
+    }
+
+}
+
+@media screen and (max-width: 996px) {
+
+    .keep-pet-happy-container .right-side img {
+        max-width: 70%;
+    }
+
+    .nav-link a {
+        font-size: 20px;
+    }
+
+    .keep-pet-happy-container .left-side {
+        max-width: 90%;
+    }
+
+    .keep-pet-happy-container .right-side {
+        max-width: 90%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .logo {
+        display: none;
+    }
+
+    .nav-links {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .cat-blog-container {
+        flex-direction: column;
+        align-items: center;
+        top: 50px;
+    }
+
+    .keep-pet-happy-container .left-side {
+        max-width: 100%;
+    }
+
+    .cat-blog, .cat-care {
+        width: 70%;
+    }
+
+    .subscribe-section {
+        padding: 30px;
+    }
+
+
+    .custom-form {
+        flex-direction: column;
+    }
+
+    .form-row {
+        flex-direction: column;
+    }
 }
