--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -479,7 +479,7 @@ body {
     width: 50%;
     margin: auto;
     gap: 40px;
-    box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
     padding: 50px;
     border-radius: 32px;
     background: var(--secondary-color);
